--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -3,6 +3,14 @@
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
+parameters:
+  - name: userpool
+    type: string
+    default: Azure Pipelines
+    values:
+    - Azure Pipelines
+    - ubuntu-latest
+
 trigger:
 - main
 
@@ -24,6 +32,12 @@ steps:
   inputs:
     containerRegistry: 'hieu-docker-registry'
     command: 'login'
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: |
+      pwd
+      docker image ls
 - task: Docker@2
   inputs:
     containerRegistry: 'hieu-docker-registry'
