--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -6,14 +6,14 @@
 parameters:
   - name: userpool
     type: string
-    default: Azure Pipelines
+    default: ubuntu-latest
     values:
     - Azure Pipelines
     - ubuntu-latest
-  - name: docker-repo
+  - name: dockerRepo
     type: string
     default: hieub1875
-  - name: docker-image
+  - name: dockerImage
     type: string
     default: azure-demo
 
@@ -21,7 +21,7 @@ trigger:
 - main
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: ${{ parameters.userpool }}
 
 steps:
 - task: Maven@3
@@ -47,6 +47,6 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'hieu-docker-registry'
-    repository: '${{ parameters.docker-repo }}/${{ parameters.docker-image }}'
+    repository: '${{ parameters.dockerRepo }}/${{ parameters.dockerImage }}'
     command: 'buildAndPush'
     Dockerfile: '**/AzureDockerfile'
